--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio | Jidan</title>
-</head>
-<body>
-    <h1>hi</h1>
-    
-</body>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <nav>
+      <a href="" class="logo">Portfolio</a>
+      <ul id="navlinks">
+        <li><a href="#home" class="link active">Home</a></li>
+        <li><a href="#about" class="link">About</a></li>
+        <li><a href="#education" class="link">Education</a></li>
+        <li><a href="#skills" class="link">Skills</a></li>
+        <li><a href="#works" class="link">Works</a></li>
+        <li><a href="#contact" class="link">Contact</a></li>
+      </ul>
+    </nav>
+    <section class="home" id="#home">
+      <h1>heading</h1>
+      <h2>heading</h2>
+      <h3>heading</h3>
+      <h4>heading</h4>
+      <h5>heading</h5>
+      <h6>heading</h6>
+      <p>paragraph</p>
+    </section>
+
+
+
+    <script src="js/main.js"></script>
+  </body>
 </html>
