--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio | Jidan</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="assets/logo.svg" type="image/x-icon">
   </head>
   <body>
     <nav>
@@ -16,7 +17,7 @@
         <li><a href="#education" class="link">Education</a></li>
         <li><a href="#skills" class="link">Skills</a></li>
         <li><a href="#works" class="link">Works</a></li>
-        <li><a href="#contact" class="link">Contact</a></li>
+        <li><a href="#contact" class="link special">Contact</a></li>
       </ul>
     </nav>
     <section class="home" id="#home">
