--- a/index.html
+++ b/index.html
@@ -20,7 +20,30 @@
         <li><a href="#contact" class="link special">Contact</a></li>
       </ul>
     </nav>
+    <div class="bodysizer">
     <section class="home" id="#home">
+      <div class="sociallinks fifth">
+        <a href=""><img src="assets/instagram.svg" alt=""></a>
+        <a href=""><img src="assets/twitter.svg" alt=""></a>
+        <a href=""><img src="assets/youtube.svg" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+      </div>
+      <div class="homecontent">
+        <div class="homedescription">
+          <h1><span class="first">Hi,</span> <span class="second">I'm Jidan</span> </h1>
+          <h4 class="third">Front-end Web and <br> Wordpress Developer</h4>
+          <div class="linkbuttons fourth">
+           <a href="#contact" class="primarybtn">Contact Me</a>
+          <a href="#about" class="secondarybtn">Know More About Me</a> 
+          </div>
+          
+        </div>
+        <img src="assets/homeprofile.png" class="secondimg" alt="">
+      </div>
+      
+    </section>
+    <section class="about" id="about">
       <h1>heading</h1>
       <h2>heading</h2>
       <h3>heading</h3>
@@ -30,7 +53,7 @@
       <p>paragraph</p>
     </section>
 
-
+  </div>
 
     <script src="js/main.js"></script>
   </body>
