--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <nav>
       <a href="" class="logo">Portfolio</a>
+      <img src="assets/menu.png" alt="" onclick="navtoggle()">
       <ul id="navlinks">
         <li><a href="#home" class="link active">Home</a></li>
         <li><a href="#about" class="link">About</a></li>
@@ -23,11 +24,15 @@
     <div class="bodysizer">
     <section class="home" id="#home">
       <div class="sociallinks fifth">
-        <a href=""><img src="assets/instagram.svg" alt=""></a>
-        <a href=""><img src="assets/twitter.svg" alt=""></a>
-        <a href=""><img src="assets/youtube.svg" alt=""></a>
-        <a href=""><img src="" alt=""></a>
-        <a href=""><img src="" alt=""></a>
+        <a href="" target="_blank"><img src="assets/instagram.svg" alt=""></a>
+        <a href="" target="_blank"><img src="assets/twitter.svg" alt=""></a>
+        <a href="" target="_blank"><img src="assets/discord.svg" alt=""></a>
+        <a href="" target="_blank"><img src="assets/youtube.svg" alt=""></a>
+        <a href="" target="_blank"><img src="assets/linkedin-alt.svg" alt=""></a>
+        <a href="" target="_blank"><img src="assets/facebook-f.svg" alt=""></a>
+        <a href="" target="_blank"><img src="assets/github.svg" alt=""></a>
+        <a href="" target="_blank"><img src="assets/slack.svg" alt=""></a>
+        
       </div>
       <div class="homecontent">
         <div class="homedescription">
@@ -42,15 +47,6 @@
         <img src="assets/homeprofile.png" class="secondimg" alt="">
       </div>
       
-    </section>
-    <section class="about" id="about">
-      <h1>heading</h1>
-      <h2>heading</h2>
-      <h3>heading</h3>
-      <h4>heading</h4>
-      <h5>heading</h5>
-      <h6>heading</h6>
-      <p>paragraph</p>
     </section>
 
   </div>
